--- a/views/css/style.css
+++ b/views/css/style.css
@@ -2,6 +2,8 @@
   outline: 1px solid red !important;
 }*/
 * {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -box-sizing: border-box;
